Fixed error pages on Safari and centered help icon

--- a/packages/fe-container/src/containers/error-page/ErrorPageContainer.less
+++ b/packages/fe-container/src/containers/error-page/ErrorPageContainer.less
@@ -2,7 +2,7 @@
 @import "../../styles/_colors.less";
 
 .errorPage_container {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   align-items: center;
   justify-content: center;
@@ -15,7 +15,7 @@
     font-size: 24px;
     line-height: 34px;
     text-align: center;
-    color: @error-page-text-color
+    color: @error-page-text-color;
   }
 
   & .descriptionMessage {
